# soar

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  THIRD_PARTY_NOTICES.md  vcpkg.json
.github/workflows/: ci.yml
docs/: build.md  licensing.md  mvp.md
include/soar/core/: backend.h  ffmpeg_backend.h  player.h
src/app/: main.cpp
src/core/: ffmpeg_backend.cpp  null_backend.cpp  player.cpp
